# Face-Recognition-System

./: README.md
face-detect/: CMakeLists.txt  Face  FaceDetectExtras.h  FaceDetectMain.cu  GPUHaarCascade.h  GPU_Face_Detect.cu  GPU_Face_Detect_Kernels.cu  GPU_Face_Detect_Kernels.cu~  Makefile  OpenCV_Face_Detect.cpp  output.txt  script.sh  script.sh~
face-recog/parallel/: CMakeLists.txt  Makefile  RecognizedFace.pgm  execute.sh  mpi_eigenfaces.cpp  out1.txt  out2.txt  out3.txt
face-recog/serial/: CMakeLists.txt  Makefile  RecognizedFaceSerial.pgm  SerialFaceRecog  execute.sh  serial-facerecog.cpp  serial_output.txt
